# jesse-ai-best-practices

./: .gitignore  HOWTO_USE.md  LICENSE  README.md
.clinerules/: JESSE_KNOWLEDGE_MANAGEMENT.md
.knowledge/: project-base.indexing-config.json
howtos/: AI_ASSISTANT_INTEGRATION.md  AMAZON_PRFAQ_COACH.md  CODING_STANDARDS.md  DOCUMENTATION_STANDARDS.md  EXTERNAL_RESOURCES.md  KNOWLEDGE_MANAGEMENT.md  TASK_MANAGEMENT.md  TEAM_COLLABORATION.md  WORKFLOW_REFERENCE.md
jesse-framework-mcp/: .gitignore  DEBUG_SCRIPTS_README.md  README.md  copy_content_simple.py  debug_path_issue.py  debug_path_issue_fixed.py  debug_path_simple.py  demo_http_path.py  demo_last_modified.py  demo_path_content.py  final_cleanup_verification.py  pyproject.toml  test_bedrock_api.py  test_bedrock_basic.py  test_gitignore_resource.py  test_inference_profile_arn.py  test_inference_profile_dump.py  test_project_root.py  test_smart_compliance_debug.py  test_strands_driver.py  utils.py
jesse-framework-mcp/build_scripts/: copy_jesse_content.py
jesse-framework-mcp/examples/: basic_conversation.py  caching_example.py  streaming_conversation.py
jesse-framework-mcp/jesse_framework_mcp/: __init__.py  constants.py  main.py
jesse-framework-mcp/jesse_framework_mcp/embedded_content/: JESSE_CODE_COMMENTS.md  JESSE_CODE_GENERATION.md  JESSE_KNOWLEDGE_MANAGEMENT.md  __init__.py
jesse-framework-mcp/jesse_framework_mcp/embedded_content/workflows/: jesse_capture_our_chat.md  jesse_do_your_magic.md  jesse_wip_kb_git_clone_import.md  jesse_wip_task_archive.md  jesse_wip_task_capture_knowledge.md  jesse_wip_task_check_consistency.md  jesse_wip_task_commit.md  jesse_wip_task_create.md  jesse_wip_task_disable.md  jesse_wip_task_new_session.md  jesse_wip_task_switch.md
jesse-framework-mcp/jesse_framework_mcp/helpers/: __init__.py  async_http_formatter.py  aws_session_manager.py  content_loaders.py  http_formatter.py  knowledge_scanners.py  mistletoe_spacing.py  path_utils.py  project_root.py  project_setup.py  session_management.py
jesse-framework-mcp/jesse_framework_mcp/jesse_cli/: __init__.py  cli_utils.py  main.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/: __init__.py  resources.py  tools.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/indexer/: __init__.py  core.py  decisions.py  discovery.py  execution.py  handlers.py  knowledge.py  models.py  planning.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/indexer/tests/: __init__.py  test_bedrock_simultaneous_indexing.py  test_handlers.py  test_integration.py  test_llm_integration.py  test_models.py  test_planning.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/indexing/: __init__.py  change_detector.py  config_manager.py  debug_handler.py  defaults.py  enhanced_prompts.py  execution_engine.py  file_analysis_cache.py  handler_interface.py  hierarchical_indexer.py  knowledge_builder.py  knowledge_file_generator.py  knowledge_prompts.py  markdown_parser.py  markdown_template_engine.py  orphaned_cleanup.py  plan_generator.py  rebuild_decision_engine.py  special_handlers.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/indexing/shared_utilities/: __init__.py  cleanup_manager.py  error_handler.py  handler_path_manager.py  timestamp_manager.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/models/: __init__.py  execution_plan.py  indexable_source.py  indexing_config.py  knowledge_context.py  rebuild_decisions.py
jesse-framework-mcp/jesse_framework_mcp/knowledge_bases/tests/: test_indexing_core.py
jesse-framework-mcp/jesse_framework_mcp/llm/: simple_file_indexer.py
jesse-framework-mcp/jesse_framework_mcp/llm/strands_agent_driver/: README.md  __init__.py  conversation.py  driver.py  exceptions.py  models.py
jesse-framework-mcp/jesse_framework_mcp/llm/strands_agent_driver/examples/: README.md  basic_conversation.py  reasoning_suppression_demo.py  streaming_conversation.py
jesse-framework-mcp/jesse_framework_mcp/resources/: __init__.py  framework_rules.py  gitignore.py  knowledge.py  project_resources.py  session_init.py  wip_tasks.py  workflows.py
jesse-framework-mcp/llm/claude4_driver/: README.md  conversation.py  driver.py  models.py
jesse-framework-mcp/llm/strands_agent_driver/: models.py
jesse-framework-mcp/llm/strands_agent_driver/examples/: basic_conversation.py  caching_example.py
jesse-framework-mcp/tests/: test_aws_session_manager.py  test_centralized_decision_engine.py  test_cline_integration.py  test_comprehensive_change_detection.py  test_configuration_template_system.py  test_content_loading.py  test_default_knowledge_directory.py  test_discovery_debug.py  test_dry_run_mode.py  test_empty_file_handling.py  test_file_analysis_cache_integration.py  test_framework_integration.py  test_gitignore_resource.py  test_handler_interface.py  test_hierarchical_dependency_planning.py  test_http_core_functionality.py  test_http_formatting.py  test_http_path_integration.py  test_http_section_formatting.py  test_individual_rules.py  test_new_resources.py  test_orphaned_cleanup.py  test_project_base_indexing_rule.py  test_project_indexing_integration.py  test_project_root.py  test_resource_architecture.py  test_root_kb_generation.py  test_safe_handler_integration.py  test_scratchpad_exclusion.py  test_session_init_resource.py  test_strands_driver.py  test_unified_handler_processing.py  test_upfront_cache_structure_preparation.py
(+252 files in other folders)
